# stratum

./: .code-review-graphignore  .dockerignore  .dockerignore.sl  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  MONOREPO.md  PHASE_15_P1_FUNCTIONAL_COMPLETION_CC_v1.0.md  README.md  SELF_CHECK.md  TECHNICAL_DEBT.md  _schema_dump.json  docker-compose.aii-cloudflared.yml  docker-compose.aii-pg.yml  docker-compose.layer-b.yml  e2e_docs_resp.json  e2e_pdf_path.txt  e2e_token.txt  e2e_token_correct.txt  e2e_token_fresh.txt  e2e_token_new.txt  e2e_upload_resp.json  e2e_upload_resp_2.json  e2e_upload_resp_3.json  e2e_upload_resp_4.json  integration_test_workflow.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
aii/: .gitignore  AII-PMS-SCHEMA-001.sql  Dockerfile.mineru-vlm  Dockerfile.qmd  PIPELINE_STATUS.md  README.md  classify_md.py  doc-reading.json  docker-compose.aii-cloudflared.yml  docker-compose.aii-mineru-vlm.yml  docker-compose.aii-qmd.yml  docker-compose.aii-refined-pg.yml  econ_convert.py  math_convert.py  oapen_fetch.py  ocr_batch.py  pyproject.toml  qmd-entrypoint.sh  quarantine_triage_report.json  reclassify_md_llm.py
aii/.cloudflared-cfg/: config.yml
aii/aii-web/: .gitignore  .npmrc  .pnpm-build-list.json  DISPLAY-VIEWS-NOTES.md  Dockerfile  MOTION-NOTES.md  package-lock.json  package.json  pnpm-workspace.yaml
aii/aii-web/src/app/: layout.tsx
aii/aii-web/src/lib/: api-client.ts  (+3 more)
aii/aii/aii/: logging_config.py
aii/aii/api/: _auth.py  _provider.py  app.py
aii/aii/config/: purpose.md
aii/aii/scripts/: backfill_translation.py
aii/aii/service/: auto_ingest.py  background_flywheel.py  background_flywheel_textbook.py  chapter_edges.py  concept_onto_ops.py  cooccurrence.py  cross_chunk_link.py  evolution_engine.py  formal_proof_engine.py  kc_cluster.py  ku_ingestion_engine.py  ku_translate.py  onto_extract_concurrent.py  onto_persist.py  onto_prompts.py  planning_completeness.py  relation_engine.py  structural_gate.py  synthesis_engine.py  synthesis_engine_deep.py  textbook_ingest.py
aii/aii/storage/: pg_backend.py
aii/deploy/systemd/: README.md  aii-backend.service  aii-context-archiver.service  aii-context-archiver.timer  aii-embed.service  aii-feeder.service  aii-flywheel-advmath.service  aii-flywheel-econ-zh.service  aii-flywheel-math-prog.service  aii-flywheel-misc.service  aii-gdrive-mount.service  aii-pg-backup.service  aii-pg-backup.timer  aii-watchdog.service  aii-watchdog.timer
aii/docs/: AII-DATA-MODEL-001.md  AII-GLOSSARY-001.md  AII-KNOWLEDGE-ONTOLOGY-002.md  PAPER_BU_SCHEMA.md
aii/econ_pipeline/: batch_report.json  flywheel_report.json  flywheel_state.json  flywheel_test_books.txt  test_books.txt
aii/econ_pipeline/ckpts/: refined_concept_canonical_econ_v1.txt  refined_concept_canonical_econ_v2.txt  refined_concept_canonical_econ_v3.txt  refined_concept_verdicts_econ.json  refined_dedup_SAME_signoff_econ_v3.md  refined_dedup_dryrun_econ_v1.txt  refined_dedup_dryrun_econ_v2.txt  refined_dedup_dryrun_econ_v3.txt  refined_dedup_dryrun_econ_v3_full.txt  refined_ingest_COMMIT_econ.txt  refined_ingest_dryrun_econ_FINDINGS.md  refined_ingest_dryrun_econ_v2.txt  refined_ingest_econzh_COMMIT.txt  refined_ingest_econzh_dryrun.txt  refined_ingest_math_COMMIT.txt  refined_ingest_newpolicy_check.txt  refined_ingest_trans_check.txt  refined_verdicts_econ.json  refined_verdicts_econzh.json  refined_verdicts_math.json
aii/econ_pipeline/qual/: micro_clean.json
aii/g0_eval/: sample_set.json
aii/math_pipeline/: quarantine.json
aii/migrations/: 0001_onto_concept_storage.sql  0002_substrate_discipline.sql  0003_concept_onto_grade.sql  0003_hybrid_fts.sql  0004_kc_embedding.sql  0005_ku_contradiction.sql  0006_ku_quarantine_and_history_fix.sql  0007_ku_contradiction_resolution.sql  0008_bu_paper_fields.sql  0009_bu_skill_embedding.sql  0010_book_classify.sql
aii/migrations/context/: 0001_context_repo_schema.sql  0002_learning_tables.sql  0003_learning_mastery.sql  0004_learning_quiz.sql  0005_learning_error_type.sql
aii/migrations/refined/: 0001_refined_repo_schema.sql  0002_dedup_decision.sql  0002_dedup_decision_ledger.sql  0003_concept_decision_ledger.sql  0003_ku_zh_grade.sql  0004_theme_kc_grade.sql  0005_kc_concept_member.sql
aii/migrations/seed/: substrate_discipline.tsv
aii/scripts/: .gitignore  advmath_convert.py  advmath_discover.py  advmath_flywheel.sh  advmath_flywheel_run.sh  advmath_pipeline.sh  advmath_recall_audit.py  advmath_verify.py  apply_dedup_verdicts.py  auto_classify_books.py  backfill_concept_discipline.py  backfill_kc_concept.py  backfill_math_ku_type.py  blocking_experiment.py  book_identity.py  build_theme_kc.py  chapter_ingest.py  chapter_synthesize.py  chapter_synthesize_advmath.py  chapter_synthesize_llm_v1.py  clean_ku.py  clean_structural.py  concept_canonical_global.py  concept_rollback_miswmerge.py  context_archiver.py  context_compiler.py  dedup_semantic.py  dedup_within_book.py  detect_contradictions.py  directed_edges.py  econ_batch_run.sh  econ_discover_all.py  econ_discover_en.py  econ_discover_zh.py  econ_flywheel_en.sh  econ_flywheel_en_run.sh  econ_flywheel_zh.sh  econ_flywheel_zh_run.sh  econ_pipeline.sh  econ_quality_gate.py  (+88 more)
aii/scripts/_logs/: reflow_3books.sh
aii/scripts/dedup/: .gitignore  README.md  candidates.py  dictionary.py  gates.py  integrate.py  judge.py  ledger.py  m0.py  orchestrate.py  readout.py  run_gold.py
aii/scripts/eval/: run_eval.py
aii/scripts/gold/: .gitignore  README.md  compare_runs.py  gold_seed.jsonl  gold_seed_math.jsonl  mine_candidates.py  score.py
aii/watchdog/: .gitignore
(+985 files in other folders)
