[project]
name = "aii"
version = "0.1.0"
description = "AII Knowledge Ingestion & Persistence Engine"
requires-python = ">=3.12"
dependencies = [
    "oprim @ git+ssh://git@github.com/helios-plat/oprim.git@v3.10.11",
    "oskill @ git+ssh://git@github.com/helios-plat/oskill.git@v3.25.3",
    "omodul @ git+ssh://git@github.com/helios-plat/omodul.git@v1.29.2",
    "obase @ git+ssh://git@github.com/helios-plat/obase.git@v0.14.1",
    "asyncpg>=0.31.0",
    "pgvector>=0.2.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "numpy>=2.0.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["aii"]
