[project]
name = "aii"
version = "0.1.0"
description = "AII Knowledge Ingestion & Persistence Engine"
requires-python = ">=3.12"
dependencies = [
    "oprim @ git+ssh://git@github.com/helios-plat/oprim.git@v3.10.20",
    "oskill @ git+ssh://git@github.com/helios-plat/oskill.git@v3.25.8",
    "omodul @ git+ssh://git@github.com/helios-plat/omodul.git@v1.30.5",
    "obase @ git+ssh://git@github.com/helios-plat/obase.git@v0.15.10",
    "asyncpg>=0.31.0",
    "pgvector>=0.2.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "numpy>=2.0.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.1",
    # oprim.embedding.__init__ 无条件 import qwen3_dashscope(dashscope 是 oprim 的 llm extra 可选依赖),
    # 本地 oprim 3.10.38 起需显式引入,否则后端 lifespan register_providers 崩溃。
    "dashscope>=1.14",
]

[tool.uv.sources]
# 迁移后本地开发:oprim 用本地源码(与 stratum-sl 容器 bind-mount 一致),
# 因当前 aii 代码引用 v3.10.20 尚无的 oprim._purpose_alignment_score 等模块。
oprim = { path = "/home/soffy/projects/platform/3O/oprim", editable = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["aii"]
